--- a/Front-end/collection.html
+++ b/Front-end/collection.html
@@ -6,30 +6,22 @@
     <title>Collection - Sole Haven</title>
     <!-- Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="collection.css">
 </head>
 <body>
 
     <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <h1><a href="index.html">Sole Haven</a></h1> <!-- Link back to homepage -->
-            </div>
-            <nav class="navigation">
-                <a href="new-arrival.html">New Arrival</a>
-                <a href="collection.html">Collection</a>
-                <a href="services.html">Services</a>
-            </nav>
-            <div class="right-content">
-                <input type="text" class="search-input" placeholder="Search...">
-                <div class="icons">
-                    <a href="#"><i class="fas fa-heart"></i></a>
-                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
-                    <a href="#"><i class="fas fa-user"></i></a>
-                </div>
-            </div>
-        </div>
+    <header>
+        <nav>
+            <a href="index.html" class="logo">Sole Haven</a>
+            <a href="new-arrival.html">New Arrival</a>
+            <a href="collection.html">Collection</a>
+            <a href="services.html">Services</a>
+            <input type="text" placeholder="Search...">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-user"></i></a>
+            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+        </nav>
     </header>
 
     <!-- Collection Section -->
