--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -22,18 +22,21 @@
 
         <!-- Centered navigation links -->
         <nav class="navigation">
-            <a href="new-arrival.html">New Arrival</a>
+            <a href="new-arrival.html">New & Featured</a>
             <a href="collection.html">Collection</a>
             <a href="services.html">Services</a>
+            <a href="services.html">Men</a>
+            <a href="services.html">Women</a>
+            <a href="services.html">Kids</a>
         </nav>
 
         <div class="right-content">
             <!-- Search bar and icons aligned to the right -->
             <input type="text" class="search-input" placeholder="Search...">
             <div class="icons">
-                <a href="#"><i class="fas fa-heart"></i></a> <!-- Wishlist -->
-                <a href="#"><i class="fas fa-shopping-cart"></i></a> <!-- Cart -->
-                <a href="#"><i class="fas fa-user"></i></a> <!-- User -->
+                <a href="favourites.html"><i class="fas fa-heart"></i></a> <!-- Wishlist -->
+                <a href="cart.html"><i class="fas fa-shopping-cart"></i></a> <!-- Cart -->
+                <a href="login.html"><i class="fas fa-user"></i></a>
             </div>
         </div>
     </header>
