Front end part 2

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -12,33 +12,24 @@
 <body>
 
     <!-- Header -->
-    <header class="header">
-        <div class="left-content">
-            <!-- Logo aligned to the left -->
-            <div class="logo">
-                <h1>Sole Haven</h1>
+    <header>
+        <nav class="navbar">
+            <a href="index.html" class="logo">Sole Haven</a>
+            <div class="nav-links">
+                <a href="new-arrival.html">New & Featured</a>
+                <a href="collection.html">Collection</a>
+                <a href="services.html">Services</a>
+                <a href="Mens.html">Men</a>
+                <a href="women.html">Women</a>
+                <a href="kids.html">Kids</a>
             </div>
-        </div>
-
-        <!-- Centered navigation links -->
-        <nav class="navigation">
-            <a href="new-arrival.html">New & Featured</a>
-            <a href="collection.html">Collection</a>
-            <a href="services.html">Services</a>
-            <a href="services.html">Men</a>
-            <a href="services.html">Women</a>
-            <a href="services.html">Kids</a>
-        </nav>
-
-        <div class="right-content">
-            <!-- Search bar and icons aligned to the right -->
-            <input type="text" class="search-input" placeholder="Search...">
-            <div class="icons">
-                <a href="favourites.html"><i class="fas fa-heart"></i></a> <!-- Wishlist -->
-                <a href="cart.html"><i class="fas fa-shopping-cart"></i></a> <!-- Cart -->
+            <div class="nav-icons">
+                <input type="text" placeholder="Search...">
+                <a href="favorites.html"><i class="fas fa-heart"></i></a>
+                <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
                 <a href="login.html"><i class="fas fa-user"></i></a>
             </div>
-        </div>
+        </nav>
     </header>
 
     <!-- Main Banner -->
