--- a/Front-end/login.html
+++ b/Front-end/login.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
-        <h3>SOLE HAVEN LOG IN</h3>
-        <a href="#">Need Help?</a>
-    </header>
-
     <div class="container">
         <div class="logo-section">
             <h1>SOLE HAVEN</h1>
@@ -23,13 +18,13 @@
             <form>
                 <div class="input-group">
                     <i class="fas fa-user"></i>
-                    <input type="text" placeholder="Username..." required>
+                    <input type="text" placeholder="Username" required>
                 </div>
                 <div class="input-group">
                     <i class="fas fa-lock"></i>
-                    <input type="password" placeholder="Password..." required>
+                    <input type="password" placeholder="Password" required>
                 </div>
-                <button type="submit">Sign in</button>
+                <button type="submit">Next</button>
             </form>
             <div class="social-login">
                 <span>----------- or -----------</span>
@@ -38,9 +33,5 @@
             </div>
         </div>
     </div>
-
-    <footer>
-        <!-- Add any footer content here if needed -->
-    </footer>
 </body>
 </html>
