--- a/Front-end/Mens.html
+++ b/Front-end/Mens.html
@@ -4,83 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Collection - Sole Haven</title>
-    <!-- Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="Mens.css">
+    <link rel="stylesheet" href="collection.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
         <nav class="navbar">
             <a href="index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
-                <a href="services.html">Services</a>
-                <a href="Mens.html">Men</a>
+                <a href="mens.html" class="active">Men</a>
                 <a href="women.html">Women</a>
                 <a href="kids.html">Kids</a>
             </div>
             <div class="nav-icons">
                 <input type="text" placeholder="Search...">
-                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="favorites.html"><i class="fas fa-heart"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
                 <a href="#"><i class="fas fa-user"></i></a>
             </div>
         </nav>
     </header>
-
-    <!-- Collection Section -->
     <section class="collection">
         <div class="container">
-            <!-- Product 1 -->
-            <div class="product-item">
-                <a href="favorites.html" class="favorite-btn">
-                    <i class="fas fa-heart"></i>
-                </a>
-                <img src="Pictures/84ed348d9f1d6cc6f8ee3a48637e3f59.jpg" alt="Men's Sneaker">
-                <h3>Classic Sneaker</h3>
-                <p>Premium men's sneakers designed for style and comfort.</p>
-                <span class="price">₱4,600.00</span>
-                <div class="sizes">
-                    <span>40</span><span>41</span><span>42</span><span>43</span>
-                </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-
-            <!-- Add more product items following the same structure -->
-            <!-- You can copy and paste the product-item div multiple times, changing the content for each -->
-            
+            <!-- Products will be dynamically inserted here -->
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h4>About Us</h4>
-                <p>Sole Haven - Your premier destination for authentic sneakers and footwear.</p>
-            </div>
-            <div class="footer-section">
-                <h4>Contact</h4>
-                <p>Email: info@solehaven.com</p>
-                <p>Phone: (123) 456-7890</p>
-            </div>
-            <div class="footer-section">
-                <h4>Follow Us</h4>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Sole Haven. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="Mens.js"></script>
+    <script src="js/collection.js"></script>
+    <script src="js/mens.js"></script>
 </body>
 </html>
