--- a/Front-end/favorites.html
+++ b/Front-end/favorites.html
@@ -6,13 +6,6 @@
     <title>Favorites - Sole Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="favorites.css">
-    <style>
-        .empty-favorites {
-            text-align: center;
-            padding: 2em;
-            font-size: 1.2em;
-        }
-    </style>
 </head>
 <body>
     <!-- Header -->
@@ -22,7 +15,6 @@
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
-                <a href="services.html">Services</a>
                 <a href="men.html">Men</a>
                 <a href="women.html">Women</a>
                 <a href="kids.html">Kids</a>
@@ -30,54 +22,22 @@
             <div class="nav-icons">
                 <input type="text" placeholder="Search...">
                 <a href="favorites.html"><i class="fas fa-heart"></i></a>
-                <a href="#"><i class="fas fa-shopping-cart"></i></a>
-                <a href="#"><i class="fas fa-user"></i></a>
+                <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                <a href="account.html"><i class="fas fa-user"></i></a>
             </div>
         </nav>
     </header>
 
     <!-- Favorites Section -->
-    <section class="collection">
-        <h2 style="text-align: center; margin-bottom: 1em;">My Favorites</h2>
-        <div class="container" id="favorites-container">
+    <section class="favorites-section">
+        <h2>My Favorites</h2>
+        <div class="favorites-container">
             <!-- Favorites will be dynamically loaded here -->
         </div>
     </section>
 
-    <script>
-        // Load and display favorites
-        window.onload = function() {
-            const favorites = JSON.parse(localStorage.getItem('favorites')) || [];
-            const container = document.getElementById('favorites-container');
-
-            if (favorites.length === 0) {
-                container.innerHTML = '<div class="empty-favorites">No favorites added yet!</div>';
-                return;
-            }
-
-            container.innerHTML = favorites.map(item => `
-                <div class="product-item">
-                    <button class="favorite-btn active" onclick="removeFromFavorites('${item.name}')">
-                        <i class="fas fa-heart" style="color: red;"></i>
-                    </button>
-                    <img src="${item.image}" alt="${item.name}">
-                    <h3>${item.name}</h3>
-                    <p>${item.description}</p>
-                    <span class="price">${item.price}</span>
-                    <div class="sizes">
-                        ${item.sizes.map(size => `<span>${size}</span>`).join('')}
-                    </div>
-                    <button class="add-to-cart">Add to Cart</button>
-                </div>
-            `).join('');
-        };
-
-        function removeFromFavorites(productName) {
-            let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
-            favorites = favorites.filter(item => item.name !== productName);
-            localStorage.setItem('favorites', JSON.stringify(favorites));
-            window.location.reload();
-        }
-    </script>
+    <!-- Scripts -->
+    <script src="./js/storage-utils.js"></script>
+    <script src="./js/favorites.js"></script>
 </body>
 </html> 
