--- a/Front-end/women.html
+++ b/Front-end/women.html
@@ -4,54 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Women's Collection - Sole Haven</title>
-    <!-- Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="women.css">
+    <link rel="stylesheet" href="collection.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
         <nav class="navbar">
             <a href="index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
-                <a href="services.html">Services</a>
-                <a href="men.html">Men</a>
-                <a href="women.html">Women</a>
+                <a href="mens.html">Men</a>
+                <a href="women.html" class="active">Women</a>
                 <a href="kids.html">Kids</a>
             </div>
             <div class="nav-icons">
                 <input type="text" placeholder="Search...">
-                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="favorites.html"><i class="fas fa-heart"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
                 <a href="#"><i class="fas fa-user"></i></a>
             </div>
         </nav>
     </header>
-
-    <!-- Collection Section -->
     <section class="collection">
         <div class="container">
-            <!-- Product 1 -->
-            <div class="product-item">
-                <a href="favorites.html" class="favorite-btn">
-                    <i class="fas fa-heart"></i>
-                </a>
-                <img src="Pictures/2345715567bdafb7e54f11fcfa316ba8.jpg" alt="Women's Sneaker">
-                <h3>Nike Air Max</h3>
-                <p>Premium women's sneakers designed for style and comfort.</p>
-                <span class="price">₱4,600.00</span>
-                <div class="sizes">
-                    <span>36</span><span>37</span><span>38</span><span>39</span>
-                </div>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-
-            <!-- Add more product items following the same structure -->
-            <!-- You can copy and paste the product-item div multiple times, changing the content for each -->
-            
+            <!-- Products will be dynamically inserted here -->
         </div>
     </section>
+    <script src="js/collection.js"></script>
 </body>
 </html> 
