--- a/Front-end/favorites.html
+++ b/Front-end/favorites.html
@@ -15,7 +15,7 @@
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
-                <a href="men.html">Men</a>
+                <a href="Mens.html">Men</a>
                 <a href="women.html">Women</a>
                 <a href="kids.html">Kids</a>
             </div>
