--- a/Front-end/women.html
+++ b/Front-end/women.html
@@ -14,7 +14,7 @@
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
-                <a href="mens.html">Men</a>
+                <a href="Mens.html">Men</a>
                 <a href="women.html" class="active">Women</a>
                 <a href="kids.html">Kids</a>
             </div>
