--- a/Front-end/kids.html
+++ b/Front-end/kids.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men's Collection - Sole Haven</title>
+    <title>Kids Collection - Sole Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="collection.css">
+    <link rel="stylesheet" href="kids.css">
 </head>
 <body>
     <!-- Header -->
@@ -15,9 +16,9 @@
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
-                <a href="Mens.html" class="active">Men</a>
+                <a href="Mens.html">Men</a>
                 <a href="women.html">Women</a>
-                <a href="kids.html">Kids</a>
+                <a href="kids.html" class="active">Kids</a>
             </div>
             <div class="nav-icons">
                 <input type="text" placeholder="Search...">
@@ -32,29 +33,43 @@
     <section class="collection">
         <div class="container">
             <!-- Product 1 -->
-            <div class="product-item" data-category="men">
+            <div class="product-item" data-category="kids">
                 <a href="product-details.html?id=1" class="product-link">
                     <div class="product-image">
-                        <img src="Pictures/2345715567bdafb7e54f11fcfa316ba8.jpg" alt="Fragment">
+                        <img src="Pictures/NIKE+DUNK+LOW+RETRO.png" alt="Nike Dunk Low Retro">
                     </div>
                     <div class="product-info">
-                        <h3>Fragment</h3>
-                        <p>Premium quality sneakers with unique design elements.</p>
-                        <span class="price">₱4,600.00</span>
+                        <h3>Nike Dunk Low Retro</h3>
+                        <p>Classic basketball-inspired design with modern comfort.</p>
+                        <span class="price">₱3,200.00</span>
                     </div>
                 </a>
             </div>
 
             <!-- Product 2 -->
-            <div class="product-item" data-category="men">
+            <div class="product-item" data-category="kids">
                 <a href="product-details.html?id=2" class="product-link">
                     <div class="product-image">
-                        <img src="Pictures/travis-scott.jpg" alt="Travis">
+                        <img src="Pictures/nike-sb-malor.jpg" alt="Nike SB Malor">
                     </div>
                     <div class="product-info">
-                        <h3>Travis</h3>
-                        <p>Stylish collaboration sneakers with premium materials.</p>
-                        <span class="price">₱1,240.00</span>
+                        <h3>Nike SB Malor</h3>
+                        <p>Professional skateboarding shoes with enhanced durability.</p>
+                        <span class="price">₱2,600.00</span>
+                    </div>
+                </a>
+            </div>
+
+            <!-- Product 3 -->
+            <div class="product-item" data-category="kids">
+                <a href="product-details.html?id=3" class="product-link">
+                    <div class="product-image">
+                        <img src="Pictures/nike-go-flyease.jpg" alt="Nike Go FlyEase">
+                    </div>
+                    <div class="product-info">
+                        <h3>Nike Go FlyEase</h3>
+                        <p>Innovative hands-free entry with FlyEase technology.</p>
+                        <span class="price">₱2,600.00</span>
                     </div>
                 </a>
             </div>
@@ -65,4 +80,4 @@
 
     <script src="js/collection.js"></script>
 </body>
-</html>
+</html> 
