--- a/Front-end/new-arrival.html
+++ b/Front-end/new-arrival.html
@@ -3,23 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Arrivals - Fashion Store</title>
+    <title>New Arrivals - Sole Haven</title>
+    <!-- Font Awesome CDN for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="new-arrival.css">
-    <link rel="stylesheet" href="favorites.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="collection.html">Collection</a></li>
-                <li><a href="Mens.html">Men</a></li>
-                <li><a href="women.html">Women</a></li>
-                <li><a href="new-arrival.html" class="active">New Arrivals</a></li>
-                <li><a href="cart.html">Cart</a></li>
-            </ul>
+        <nav class="navbar">
+            <a href="index.html" class="logo">Sole Haven</a>
+            <div class="nav-links">
+                <a href="new-arrival.html" class="active">New & Featured</a>
+                <a href="collection.html">Collection</a>
+                <a href="Mens.html">Men</a>
+                <a href="women.html">Women</a>
+                <a href="kids.html">Kids</a>
+            </div>
+            <div class="nav-icons">
+                <input type="text" placeholder="Search...">
+                <a href="favorites.html"><i class="fas fa-heart"></i></a>
+                <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                <a href="login.html"><i class="fas fa-user"></i></a>
+            </div>
         </nav>
     </header>
 
@@ -126,12 +133,12 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h4>About Us</h4>
-                <p>Your premier destination for fashion and style.</p>
+                <h4>About Sole Haven</h4>
+                <p>Your premier destination for exclusive sneakers and style.</p>
             </div>
             <div class="footer-section">
                 <h4>Contact</h4>
-                <p>Email: info@fashionstore.com</p>
+                <p>Email: info@solehaven.com</p>
                 <p>Phone: (555) 123-4567</p>
             </div>
             <div class="footer-section">
@@ -144,7 +151,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Fashion Store. All rights reserved.</p>
+            <p>&copy; 2024 Sole Haven. All rights reserved.</p>
         </div>
     </footer>
 
