--- a/Front-end/Mens.html
+++ b/Front-end/Mens.html
@@ -32,34 +32,50 @@
     <section class="collection">
         <div class="container">
             <!-- Product 1 -->
-            <div class="product-item" data-category="men">
+            <div class="product-item" data-category="mens">
                 <a href="product-details.html?id=1" class="product-link">
-                    <div class="product-image">
-                        <img src="Pictures/2345715567bdafb7e54f11fcfa316ba8.jpg" alt="Fragment">
-                    </div>
-                    <div class="product-info">
-                        <h3>Fragment</h3>
-                        <p>Premium quality sneakers with unique design elements.</p>
-                        <span class="price">₱4,600.00</span>
-                    </div>
+                    <img src="shoes/AIR FORCE 1 '07 LV8.png" alt="Air Force 1 '07 LV8">
+                    <h3>Air Force </h3>
+                    <p>Premium quality sneakers with unique design elements.</p>
+                    <span class="price">₱4,600.00</span>
                 </a>
             </div>
 
-            <!-- Product 2 -->
-            <div class="product-item" data-category="men">
+            <div class="product-item" data-category="mens">
                 <a href="product-details.html?id=2" class="product-link">
-                    <div class="product-image">
-                        <img src="Pictures/travis-scott.jpg" alt="Travis">
-                    </div>
-                    <div class="product-info">
-                        <h3>Travis</h3>
-                        <p>Stylish collaboration sneakers with premium materials.</p>
-                        <span class="price">₱1,240.00</span>
-                    </div>
+                    <img src="shoes/AIR JORDAN 1 LOW G.jpg" alt="Air Jordan 1 Low G">
+                    <h3>Air Jordan 1 Low G</h3>
+                    <p>Stylish collaboration sneakers with premium materials.</p>
+                    <span class="price">₱1,240.00</span>
                 </a>
             </div>
 
-            <!-- Add more products as needed -->
+            <div class="product-item" data-category="mens">
+                <a href="product-details.html?id=3" class="product-link">
+                    <img src="Pictures/NIKE+DUNK+LOW+RETRO.png" alt="Nike Dunk Low Retro">
+                    <h3>Nike Dunk Low Retro</h3>
+                    <p>Classic basketball-inspired design with modern comfort.</p>
+                    <span class="price">₱3,200.00</span>
+                </a>
+            </div>
+
+            <div class="product-item" data-category="mens">
+                <a href="product-details.html?id=4" class="product-link">
+                    <img src="Pictures/NIKE+SB+MALOR.png" alt="Nike SB Malor">
+                    <h3>Nike SB Malor</h3>
+                    <p>Professional skateboarding shoes with enhanced durability.</p>
+                    <span class="price">₱2,600.00</span>
+                </a>
+            </div>
+
+            <div class="product-item" data-category="mens">
+                <a href="product-details.html?id=5" class="product-link">
+                    <img src="Pictures/NIKE+GO+FLYEASE.png" alt="Nike Go FlyEase">
+                    <h3>Nike Go FlyEase</h3>
+                    <p>Innovative hands-free entry with FlyEase technology.</p>
+                    <span class="price">₱2,600.00</span>
+                </a>
+            </div>
         </div>
     </section>
 
