--- a/Front-end/kids.html
+++ b/Front-end/kids.html
@@ -32,49 +32,41 @@
     <!-- Collection Section -->
     <section class="collection">
         <div class="container">
-            <!-- Product 1 -->
             <div class="product-item" data-category="kids">
-                <a href="product-details.html?id=1" class="product-link">
-                    <div class="product-image">
-                        <img src="Pictures/NIKE+DUNK+LOW+RETRO.png" alt="Nike Dunk Low Retro">
-                    </div>
-                    <div class="product-info">
-                        <h3>Nike Dunk Low Retro</h3>
-                        <p>Classic basketball-inspired design with modern comfort.</p>
-                        <span class="price">₱3,200.00</span>
-                    </div>
+                <a href="product-details.html?id=6" class="product-link">
+                    <img src="shoes/AIR MAX DN (GS) kids.png" alt="Air Max DN (GS) kids">
+                    <h3>Air Max DN (GS) kids</h3>
+                    <p>Kids' Air Max with comfortable cushioning.</p>
+                    <span class="price">₱2,600.00</span>
                 </a>
             </div>
 
-            <!-- Product 2 -->
             <div class="product-item" data-category="kids">
-                <a href="product-details.html?id=2" class="product-link">
-                    <div class="product-image">
-                        <img src="Pictures/nike-sb-malor.jpg" alt="Nike SB Malor">
-                    </div>
-                    <div class="product-info">
-                        <h3>Nike SB Malor</h3>
-                        <p>Professional skateboarding shoes with enhanced durability.</p>
-                        <span class="price">₱2,600.00</span>
-                    </div>
+                <a href="product-details.html?id=8" class="product-link">
+                    <img src="shoes/AIR MAX DN (GS) kids.png" alt="AIR MAX DN (GS) kids">
+                    <h3>AIR MAX DN (GS) kids</h3>
+                    <p>Stylish Air Max designed for growing feet.</p>
+                    <span class="price">₱2,600.00</span>
                 </a>
             </div>
 
-            <!-- Product 3 -->
             <div class="product-item" data-category="kids">
-                <a href="product-details.html?id=3" class="product-link">
-                    <div class="product-image">
-                        <img src="Pictures/nike-go-flyease.jpg" alt="Nike Go FlyEase">
-                    </div>
-                    <div class="product-info">
-                        <h3>Nike Go FlyEase</h3>
-                        <p>Innovative hands-free entry with FlyEase technology.</p>
-                        <span class="price">₱2,600.00</span>
-                    </div>
+                <a href="product-details.html?id=9" class="product-link">
+                    <img src="shoes/BLAZER LOW '77 (GS) KIDS.png" alt="Blazer Low '77 (GS) KIDS">
+                    <h3>Blazer Low '77 (GS) KIDS</h3>
+                    <p>Classic style reimagined for kids.</p>
+                    <span class="price">₱2,600.00</span>
                 </a>
             </div>
 
-            <!-- Add more products as needed -->
+            <div class="product-item" data-category="kids">
+                <a href="product-details.html?id=14" class="product-link">
+                    <img src="shoes/KIDS SABRINA 2 KC (GS).jpg" alt="Kids Sabrina 2 KC (GS)">
+                    <h3>Kids Sabrina 2 KC (GS)</h3>
+                    <p>Performance basketball shoes for young athletes.</p>
+                    <span class="price">₱2,600.00</span>
+                </a>
+            </div>
         </div>
     </section>
 
