--- a/Front-end/women.html
+++ b/Front-end/women.html
@@ -28,7 +28,41 @@
     </header>
     <section class="collection">
         <div class="container">
-            <!-- Products will be dynamically inserted here -->
+            <div class="product-item" data-category="womens">
+                <a href="product-details.html?id=10" class="product-link">
+                    <img src="shoes/WMNS AIR JORDAN 1 ELEVATE LOW.png" alt="WMNS Air Jordan 1 Elevate Low">
+                    <h3>WMNS Air Jordan 1 Elevate Low</h3>
+                    <p>Women's exclusive Jordan design with elevated comfort.</p>
+                    <span class="price">₱2,600.00</span>
+                </a>
+            </div>
+
+            <div class="product-item" data-category="womens">
+                <a href="product-details.html?id=11" class="product-link">
+                    <img src="shoes/WMNS JORDAN STADIUM 90.png" alt="WMNS Jordan Stadium 90">
+                    <h3>WMNS Jordan Stadium 90</h3>
+                    <p>Premium women's Jordan sneakers for style and comfort.</p>
+                    <span class="price">₱2,600.00</span>
+                </a>
+            </div>
+
+            <div class="product-item" data-category="womens">
+                <a href="product-details.html?id=12" class="product-link">
+                    <img src="shoes/W NIKE DUNK LOW TWIST.png" alt="W Nike Dunk Low Twist">
+                    <h3>W Nike Dunk Low Twist</h3>
+                    <p>Women's exclusive Dunk Low with unique twist design.</p>
+                    <span class="price">₱2,600.00</span>
+                </a>
+            </div>
+
+            <div class="product-item" data-category="womens">
+                <a href="product-details.html?id=13" class="product-link">
+                    <img src="shoes/W NIKE IN SEASON TR 13.png" alt="W Nike In Season TR 13">
+                    <h3>W Nike In Season TR 13</h3>
+                    <p>Women's training shoes for maximum performance.</p>
+                    <span class="price">₱2,600.00</span>
+                </a>
+            </div>
         </div>
     </section>
     <script src="js/collection.js"></script>
