--- a/Front-end/collection.html
+++ b/Front-end/collection.html
@@ -35,10 +35,10 @@
 <section class="collection">
     <div class="container">
         <!-- Product 1 -->
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="mens">
             <a href="product-details.html?id=1" class="product-link">
-                <img src="Pictures/2345715567bdafb7e54f11fcfa316ba8.jpg" alt="Fragment">
-                <h3>Fragment</h3>
+                <img src="shoes/AIR FORCE 1 '07 LV8.png" alt="Air Force 1 '07 LV8">
+                <h3>Air Force </h3>
                 <p>Premium quality sneakers with unique design elements.</p>
                 <span class="price">₱4,600.00</span>
             </a>
@@ -46,10 +46,10 @@
 
         <!-- Repeat similar blocks for more products -->
         <!-- Product 2 to Product 24 -->
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="mens">
             <a href="product-details.html?id=2" class="product-link">
-                <img src="Pictures/7857e1fc08bb25f8706c3ae245568f7b.jpg" alt="Travis">
-                <h3>Travis</h3>
+                <img src="shoes/AIR JORDAN 1 LOW G.jpg" alt="Air Jordan 1 Low G">
+                <h3>Air Jordan 1 Low G</h3>
                 <p>Stylish collaboration sneakers with premium materials.</p>
                 <span class="price">₱1,240.00</span>
             </a>
@@ -59,7 +59,7 @@
         <!-- Product 3 to Product 24 -->
         
         <!-- Example for Product 3 -->
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="mens">
             <a href="product-details.html?id=3" class="product-link">
                 <img src="Pictures/NIKE+DUNK+LOW+RETRO.png" alt="Nike Dunk Low Retro">
                 <h3>Nike Dunk Low Retro</h3>
@@ -68,7 +68,7 @@
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="mens">
             <a href="product-details.html?id=4&name=Nike SB Malor&price=2600&image=Pictures/NIKE+SB+MALOR.png" class="product-link">
                 <img src="Pictures/NIKE+SB+MALOR.png" alt="Nike SB Malor">
                 <h3>Nike SB Malor</h3>
@@ -77,7 +77,7 @@
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="mens">
             <a href="product-details.html?id=5&name=Nike Go FlyEase&price=2600&image=Pictures/NIKE+GO+FLYEASE.png" class="product-link">
                 <img src="Pictures/NIKE+GO+FLYEASE.png" alt="Nike Go FlyEase">
                 <h3>Nike Go FlyEase</h3>
@@ -86,82 +86,82 @@
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="mens">
             <a href="product-details.html?id=6&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
+                <img src="shoes/AIR MAX DN (GS) kids.png" alt="Air Max DN (GS) kids">
+                <h3>Air Max DN (GS) kids</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
             </a>
         </div>
 
-        <div class="product-item" data-category="women">
+        <div class="product-item" data-category="womens">
             <a href="product-details.html?id=7&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
+                <img src="shoes/AIR ZOOM PEGASUS 41 (GS) kids.png" alt="Air Zoom Pegasus 41 (GS) kids">
+                <h3>Air Zoom Pegasus 41 (GS) kids</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
             </a>
         </div>
 
-        <div class="product-item" data-category="women">
+        <div class="product-item" data-category="kids">
             <a href="product-details.html?id=8&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
+                <img src="shoes/AIR MAX DN (GS) kids.png" alt="AIR MAX DN (GS) kids">
+                <h3>AIR MAX DN (GS) kids</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="kids">
             <a href="product-details.html?id=9&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
+                <img src="shoes/BLAZER LOW '77 (GS) KIDS.png" alt="Blazer Low '77 (GS) KIDS">
+                <h3>Blazer Low '77 (GS) KIDS</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="womens">
             <a href="product-details.html?id=10&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
+                <img src="shoes/WMNS AIR JORDAN 1 ELEVATE LOW.png" alt="WMNS Air Jordan 1 Elevate Low">
+                <h3>WMNS Air Jordan 1 Elevate Low</h3>
+                <p>Women's exclusive Jordan design with elevated comfort.</p>
                 <span class="price">₱2,600.00</span>
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="womens">
             <a href="product-details.html?id=11&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
+                <img src="shoes/WMNS JORDAN STADIUM 90.png" alt="WMNS Jordan Stadium 90">
+                <h3>WMNS Jordan Stadium 90</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="womens">
             <a href="product-details.html?id=12&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
+                <img src="shoes/W NIKE DUNK LOW TWIST.png" alt="W Nike Dunk Low Twist">
+                <h3>W Nike Dunk Low Twist</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="womens">
             <a href="product-details.html?id=13&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
+                <img src="shoes/W NIKE IN SEASON TR 13.png" alt="W Nike In Season TR 13">
+                <h3>W Nike In Season TR 13</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
             </a>
         </div>
 
-        <div class="product-item" data-category="men">
+        <div class="product-item" data-category="kids">
             <a href="product-details.html?id=14&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Street T-Shirt">
-                <h3>Street T-Shirt</h3>
+                <img src="shoes/KIDS SABRINA 2 KC (GS).jpg" alt="Kids Sabrina 2 KC (GS)">
+                <h3>Kids Sabrina 2 KC (GS)</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
             </a>
