--- a/Front-end/Mens.html
+++ b/Front-end/Mens.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Collection - Sole Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="collection.css">
+    <link rel="stylesheet" href="Mens.css">
 </head>
 <body>
     <!-- Header -->
