--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -29,6 +29,15 @@
                 <a href="login.html"><i class="fas fa-user"></i></a>
             </div>
         </nav>
+
+        <select id="shoe-category" onchange="filterCategory()">
+            <option value="all">All Shoes</option>
+            <option value="men">Men's Shoes</option>
+            <option value="women">Women's Shoes</option>
+            <option value="kids">Kids' Shoes</option>
+        </select>
+    </nav>   
+</header>
     </header>
 
     <!-- Main Banner -->
