--- a/Front-end/checkout.html
+++ b/Front-end/checkout.html
@@ -19,25 +19,20 @@
 
         <div class="delivery-address">
             <h2>Delivery Address</h2>
-            <form id="address-form">
-                <label for="name">Full Name</label>
-                <input type="text" id="name" value="John Doe" required>
+            <div class="address-box">
+                <form id="address-form">
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" class="input-address">
 
-                <label for="address">Street Address</label>
-                <input type="text" id="address" value="123 Main St, Apartment 4B" required>
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" class="input-address">
 
-                <label for="city">City</label>
-                <input type="text" id="city" value="New York" required>
+                    <label for="address">Street Address (required)</label>
+                    <input type="text" id="address" placeholder="Input Address" value="Purok-2, Cogon, Babak, Island Garden City Of Samal, Cogon, Island Garden City Of Samal, Mindanao, Davao Del Norte 8119" class="input-address">
 
-                <label for="zipcode">Zip Code</label>
-                <input type="text" id="zipcode" value="10001" required>
-
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" value="123-456-7890" required>
-
-                <button type="submit">Save Address</button>
-                <button type="button" id="change-address-btn">Change Address</button>
-            </form>
+                    <button type="button" id="change-address-btn">Change Address</button>
+                </form>
+            </div>
         </div>
 
         <div class="payment-method">
