--- a/Front-end/pages/collection.html
+++ b/Front-end/pages/collection.html
@@ -6,16 +6,15 @@
     <title>Collection - Sole Haven</title>
     <!-- Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="collection.css">
+    <link rel="stylesheet" href="../css/collection.css">
 
 </head>
 <body>
 
     <!-- Header -->
-    <!-- Header -->
 <header>
     <nav class="navbar">
-        <a href="index.html" class="logo">Sole Haven</a>
+        <a href="../index.html" class="logo">Sole Haven</a>
         <div class="nav-links">
             <a href="new-arrival.html">New & Featured</a>
             <a href="collection.html" class="active">Collection</a>
@@ -26,8 +25,8 @@
         <div class="nav-icons">
             <input type="text" placeholder="Search...">
             <a href="favorites.html"><i class="fas fa-heart"></i></a>
-            <a href="#"><i class="fas fa-shopping-cart"></i></a>
-            <a href="#"><i class="fas fa-user"></i></a>
+            <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+            <a href="login.html"><i class="fas fa-user"></i></a>
         </div>
     </nav>
 </header>
@@ -37,7 +36,7 @@
         <!-- Product 1 -->
         <div class="product-item" data-category="mens">
             <a href="product-details.html?id=1" class="product-link">
-                <img src="shoes/AIR FORCE 1 '07 LV8.png" alt="Air Force 1 '07 LV8">
+                <img src="../assets/shoes/AIR FORCE 1 '07 LV8.png" alt="Air Force 1 '07 LV8">
                 <h3>Air Force </h3>
                 <p>Premium quality sneakers with unique design elements.</p>
                 <span class="price">₱4,600.00</span>
@@ -48,7 +47,7 @@
         <!-- Product 2 to Product 24 -->
         <div class="product-item" data-category="mens">
             <a href="product-details.html?id=2" class="product-link">
-                <img src="shoes/AIR JORDAN 1 LOW G.jpg" alt="Air Jordan 1 Low G">
+                <img src="../assets/shoes/AIR JORDAN 1 LOW G.jpg" alt="Air Jordan 1 Low G">
                 <h3>Air Jordan 1 Low G</h3>
                 <p>Stylish collaboration sneakers with premium materials.</p>
                 <span class="price">₱1,240.00</span>
@@ -61,7 +60,7 @@
         <!-- Example for Product 3 -->
         <div class="product-item" data-category="mens">
             <a href="product-details.html?id=3" class="product-link">
-                <img src="Pictures/NIKE+DUNK+LOW+RETRO.png" alt="Nike Dunk Low Retro">
+                <img src="../assets/pictures/NIKE+DUNK+LOW+RETRO.png" alt="Nike Dunk Low Retro">
                 <h3>Nike Dunk Low Retro</h3>
                 <p>Classic basketball-inspired design with modern comfort.</p>
                 <span class="price">₱3,200.00</span>
@@ -70,7 +69,7 @@
 
         <div class="product-item" data-category="mens">
             <a href="product-details.html?id=4&name=Nike SB Malor&price=2600&image=Pictures/NIKE+SB+MALOR.png" class="product-link">
-                <img src="Pictures/NIKE+SB+MALOR.png" alt="Nike SB Malor">
+                <img src="../assets/pictures/NIKE+SB+MALOR.png" alt="Nike SB Malor">
                 <h3>Nike SB Malor</h3>
                 <p>Professional skateboarding shoes with enhanced durability.</p>
                 <span class="price">₱2,600.00</span>
@@ -79,7 +78,7 @@
 
         <div class="product-item" data-category="mens">
             <a href="product-details.html?id=5&name=Nike Go FlyEase&price=2600&image=Pictures/NIKE+GO+FLYEASE.png" class="product-link">
-                <img src="Pictures/NIKE+GO+FLYEASE.png" alt="Nike Go FlyEase">
+                <img src="../assets/pictures/NIKE+GO+FLYEASE.png" alt="Nike Go FlyEase">
                 <h3>Nike Go FlyEase</h3>
                 <p>Innovative hands-free entry with FlyEase technology.</p>
                 <span class="price">₱2,600.00</span>
@@ -88,7 +87,7 @@
 
         <div class="product-item" data-category="mens">
             <a href="product-details.html?id=6&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/AIR MAX DN (GS) kids.png" alt="Air Max DN (GS) kids">
+                <img src="../assets/shoes/AIR MAX DN (GS) kids.png" alt="Air Max DN (GS) kids">
                 <h3>Air Max DN (GS) kids</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
@@ -97,7 +96,7 @@
 
         <div class="product-item" data-category="womens">
             <a href="product-details.html?id=7&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/AIR ZOOM PEGASUS 41 (GS) kids.png" alt="Air Zoom Pegasus 41 (GS) kids">
+                <img src="../assets/shoes/AIR ZOOM PEGASUS 41 (GS) kids.png" alt="Air Zoom Pegasus 41 (GS) kids">
                 <h3>Air Zoom Pegasus 41 (GS) kids</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
@@ -106,7 +105,7 @@
 
         <div class="product-item" data-category="kids">
             <a href="product-details.html?id=8&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/AIR MAX DN (GS) kids.png" alt="AIR MAX DN (GS) kids">
+                <img src="../assets/shoes/AIR MAX DN (GS) kids.png" alt="AIR MAX DN (GS) kids">
                 <h3>AIR MAX DN (GS) kids</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
@@ -115,7 +114,7 @@
 
         <div class="product-item" data-category="kids">
             <a href="product-details.html?id=9&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/BLAZER LOW '77 (GS) KIDS.png" alt="Blazer Low '77 (GS) KIDS">
+                <img src="../assets/shoes/BLAZER LOW '77 (GS) KIDS.png" alt="Blazer Low '77 (GS) KIDS">
                 <h3>Blazer Low '77 (GS) KIDS</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
@@ -124,7 +123,7 @@
 
         <div class="product-item" data-category="womens">
             <a href="product-details.html?id=10&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/WMNS AIR JORDAN 1 ELEVATE LOW.png" alt="WMNS Air Jordan 1 Elevate Low">
+                <img src="../assets/shoes/WMNS AIR JORDAN 1 ELEVATE LOW.png" alt="WMNS Air Jordan 1 Elevate Low">
                 <h3>WMNS Air Jordan 1 Elevate Low</h3>
                 <p>Women's exclusive Jordan design with elevated comfort.</p>
                 <span class="price">₱2,600.00</span>
@@ -133,7 +132,7 @@
 
         <div class="product-item" data-category="womens">
             <a href="product-details.html?id=11&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/WMNS JORDAN STADIUM 90.png" alt="WMNS Jordan Stadium 90">
+                <img src="../assets/shoes/WMNS JORDAN STADIUM 90.png" alt="WMNS Jordan Stadium 90">
                 <h3>WMNS Jordan Stadium 90</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
@@ -142,7 +141,7 @@
 
         <div class="product-item" data-category="womens">
             <a href="product-details.html?id=12&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/W NIKE DUNK LOW TWIST.png" alt="W Nike Dunk Low Twist">
+                <img src="../assets/shoes/W NIKE DUNK LOW TWIST.png" alt="W Nike Dunk Low Twist">
                 <h3>W Nike Dunk Low Twist</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
@@ -151,7 +150,7 @@
 
         <div class="product-item" data-category="womens">
             <a href="product-details.html?id=13&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/W NIKE IN SEASON TR 13.png" alt="W Nike In Season TR 13">
+                <img src="../assets/shoes/W NIKE IN SEASON TR 13.png" alt="W Nike In Season TR 13">
                 <h3>W Nike In Season TR 13</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
@@ -160,7 +159,7 @@
 
         <div class="product-item" data-category="kids">
             <a href="product-details.html?id=14&name=Street T-Shirt&price=2600&image=Pictures/e7d594974256984c501450438c01df02.jpg" class="product-link">
-                <img src="shoes/KIDS SABRINA 2 KC (GS).jpg" alt="Kids Sabrina 2 KC (GS)">
+                <img src="../assets/shoes/KIDS SABRINA 2 KC (GS).jpg" alt="Kids Sabrina 2 KC (GS)">
                 <h3>Kids Sabrina 2 KC (GS)</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque pretium neque, et accumsan enim gravida in.</p>
                 <span class="price">₱2,600.00</span>
