--- a/Front-end/pages/favorites.html
+++ b/Front-end/pages/favorites.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorites - Sole Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="favorites.css">
+    <link rel="stylesheet" href="../css/favorites.css">
+
 </head>
 <body>
     <!-- Header -->
     <header>
         <nav class="navbar">
-            <a href="index.html" class="logo">Sole Haven</a>
+            <a href="../index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
@@ -37,7 +38,8 @@
     </section>
 
     <!-- Scripts -->
-    <script src="./js/storage-utils.js"></script>
-    <script src="./js/favorites.js"></script>
+    <script src="../js/storage-utils.js"></script>
+    <script src="../js/favorites.js"></script>
+    
 </body>
 </html> 
