--- a/Front-end/pages/login.html
+++ b/Front-end/pages/login.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sole Haven Login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <div class="container">
         <div class="logo-section">
@@ -34,6 +35,6 @@
             </form>
         </div>
     </div>
-    <script type="module" src="js/login.js"></script>
+    <script type="module" src="../js/login.js"></script>
 </body>
 </html>
