--- a/Front-end/pages/women.html
+++ b/Front-end/pages/women.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Women's Collection - Sole Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="women.css">
+    <link rel="stylesheet" href="../css/women.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
-            <a href="index.html" class="logo">Sole Haven</a>
+            <a href="../index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
@@ -30,7 +31,7 @@
         <div class="container">
             <div class="product-item" data-category="womens">
                 <a href="product-details.html?id=10" class="product-link">
-                    <img src="shoes/WMNS AIR JORDAN 1 ELEVATE LOW.png" alt="WMNS Air Jordan 1 Elevate Low">
+                    <img src="../assets/shoes/WMNS AIR JORDAN 1 ELEVATE LOW.png" alt="WMNS Air Jordan 1 Elevate Low">
                     <h3>WMNS Air Jordan 1 Elevate Low</h3>
                     <p>Women's exclusive Jordan design with elevated comfort.</p>
                     <span class="price">₱2,600.00</span>
@@ -39,7 +40,7 @@
 
             <div class="product-item" data-category="womens">
                 <a href="product-details.html?id=11" class="product-link">
-                    <img src="shoes/WMNS JORDAN STADIUM 90.png" alt="WMNS Jordan Stadium 90">
+                    <img src="../assets/shoes/WMNS JORDAN STADIUM 90.png" alt="WMNS Jordan Stadium 90">
                     <h3>WMNS Jordan Stadium 90</h3>
                     <p>Premium women's Jordan sneakers for style and comfort.</p>
                     <span class="price">₱2,600.00</span>
@@ -48,7 +49,7 @@
 
             <div class="product-item" data-category="womens">
                 <a href="product-details.html?id=12" class="product-link">
-                    <img src="shoes/W NIKE DUNK LOW TWIST.png" alt="W Nike Dunk Low Twist">
+                    <img src="../assets/shoes/W NIKE DUNK LOW TWIST.png" alt="W Nike Dunk Low Twist">
                     <h3>W Nike Dunk Low Twist</h3>
                     <p>Women's exclusive Dunk Low with unique twist design.</p>
                     <span class="price">₱2,600.00</span>
@@ -57,7 +58,7 @@
 
             <div class="product-item" data-category="womens">
                 <a href="product-details.html?id=13" class="product-link">
-                    <img src="shoes/W NIKE IN SEASON TR 13.png" alt="W Nike In Season TR 13">
+                    <img src="../assets/shoes/W NIKE IN SEASON TR 13.png" alt="W Nike In Season TR 13">
                     <h3>W Nike In Season TR 13</h3>
                     <p>Women's training shoes for maximum performance.</p>
                     <span class="price">₱2,600.00</span>
@@ -65,6 +66,7 @@
             </div>
         </div>
     </section>
-    <script src="js/collection.js"></script>
+    
+    <script src="../js/collection.js"></script>
 </body>
 </html> 
