--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -6,7 +6,8 @@
     <title>Sole Haven</title>
     <!-- Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+
     
 </head>
 <body>
@@ -16,42 +17,32 @@
         <nav class="navbar">
             <a href="index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
-                <a href="new-arrival.html">New & Featured</a>
-                <a href="collection.html">Collection</a>
-                <a href="Mens.html">Men</a>
-                <a href="women.html">Women</a>
-                <a href="kids.html">Kids</a>
+                <a href="pages/new-arrival.html">New & Featured</a>
+                <a href="pages/collection.html">Collection</a>
+                <a href="pages/Mens.html">Men</a>
+                <a href="pages/women.html">Women</a>
+                <a href="pages/kids.html">Kids</a>
             </div>
             <div class="nav-icons">
                 <input type="text" placeholder="Search...">
-                <a href="favorites.html"><i class="fas fa-heart"></i></a>
-                <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-                <a href="login.html"><i class="fas fa-user"></i></a>
+                <a href="pages/favorites.html"><i class="fas fa-heart"></i></a>
+                <a href="pages/cart.html"><i class="fas fa-shopping-cart"></i></a>
+                <a href="pages/login.html"><i class="fas fa-user"></i></a>
             </div>
         </nav>
-
-        <select id="shoe-category" onchange="filterCategory()">
-            <option value="all">All Shoes</option>
-            <option value="men">Men's Shoes</option>
-            <option value="women">Women's Shoes</option>
-            <option value="kids">Kids' Shoes</option>
-        </select>
     </nav>   
 </header>
-    </header>
 
     <!-- Main Banner -->
     <section class="main-banner">
         <div class="banner-content">
             <h2>Unleash Your Urban Style</h2>
-            <a href="#" class="shop-btn">Shop Now!</a>
+            <a href="pages/collection.html" class="shop-btn">Shop Now!</a>
         </div>
-        <!-- Next Button -->
-        <a href="#" class="next-btn">
-            <i class="fas fa-chevron-right"></i>
-        </a>
     </section>
     
+    <script src="js/shoecase.js"></script>
+
 
 </body>
 </html>
