--- a/Front-end/pages/Mens.html
+++ b/Front-end/pages/Mens.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Collection - Sole Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="Mens.css">
+    <link rel="stylesheet" href="../css/Mens.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <nav class="navbar">
-            <a href="index.html" class="logo">Sole Haven</a>
+            <a href="../index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
@@ -34,7 +34,7 @@
             <!-- Product 1 -->
             <div class="product-item" data-category="mens">
                 <a href="product-details.html?id=1" class="product-link">
-                    <img src="shoes/AIR FORCE 1 '07 LV8.png" alt="Air Force 1 '07 LV8">
+                    <img src="../assets/shoes/AIR FORCE 1 '07 LV8.png" alt="Air Force 1 '07 LV8">
                     <h3>Air Force </h3>
                     <p>Premium quality sneakers with unique design elements.</p>
                     <span class="price">₱4,600.00</span>
@@ -43,7 +43,7 @@
 
             <div class="product-item" data-category="mens">
                 <a href="product-details.html?id=2" class="product-link">
-                    <img src="shoes/AIR JORDAN 1 LOW G.jpg" alt="Air Jordan 1 Low G">
+                    <img src="../assets/shoes/AIR JORDAN 1 LOW G.jpg" alt="Air Jordan 1 Low G">
                     <h3>Air Jordan 1 Low G</h3>
                     <p>Stylish collaboration sneakers with premium materials.</p>
                     <span class="price">₱1,240.00</span>
@@ -52,7 +52,7 @@
 
             <div class="product-item" data-category="mens">
                 <a href="product-details.html?id=3" class="product-link">
-                    <img src="Pictures/NIKE+DUNK+LOW+RETRO.png" alt="Nike Dunk Low Retro">
+                    <img src="../assets/pictures/NIKE+DUNK+LOW+RETRO.png" alt="Nike Dunk Low Retro">
                     <h3>Nike Dunk Low Retro</h3>
                     <p>Classic basketball-inspired design with modern comfort.</p>
                     <span class="price">₱3,200.00</span>
@@ -61,7 +61,7 @@
 
             <div class="product-item" data-category="mens">
                 <a href="product-details.html?id=4" class="product-link">
-                    <img src="Pictures/NIKE+SB+MALOR.png" alt="Nike SB Malor">
+                    <img src="../assets/pictures/NIKE+SB+MALOR.png" alt="Nike SB Malor">
                     <h3>Nike SB Malor</h3>
                     <p>Professional skateboarding shoes with enhanced durability.</p>
                     <span class="price">₱2,600.00</span>
@@ -70,7 +70,7 @@
 
             <div class="product-item" data-category="mens">
                 <a href="product-details.html?id=5" class="product-link">
-                    <img src="Pictures/NIKE+GO+FLYEASE.png" alt="Nike Go FlyEase">
+                    <img src="../assets/pictures/NIKE+GO+FLYEASE.png" alt="Nike Go FlyEase">
                     <h3>Nike Go FlyEase</h3>
                     <p>Innovative hands-free entry with FlyEase technology.</p>
                     <span class="price">₱2,600.00</span>
@@ -79,6 +79,7 @@
         </div>
     </section>
 
-    <script src="js/collection.js"></script>
+    <script src="../js/collection.js"></script>
+
 </body>
 </html>
