--- a/Front-end/pages/cart.html
+++ b/Front-end/pages/cart.html
@@ -6,14 +6,15 @@
     <title>Shopping Cart - Sole Haven</title>
     <!-- Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/cart.css">
 </head>
+
 <body>
     <!-- Header -->
     <header>
         <nav class="navbar">
-            <a href="index.html" class="logo">Sole Haven</a>
+            <a href="../index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
@@ -38,7 +39,7 @@
             <div class="cart-items">
                 <!-- Sample Cart Item -->
                 <div class="cart-item">
-                    <img src="Pictures/e7d594974256984c501450438c01df02.jpg" alt="Product Image" class="cart-item-image">
+                    <img src="../assets/pictures/e7d594974256984c501450438c01df02.jpg" alt="Product Image" class="cart-item-image">
                     <div class="cart-item-details">
                         <h3>Nike Air Max</h3>
                         <p class="item-category">Men's Shoes</p>
@@ -100,7 +101,8 @@
     </footer>
 
     <!-- Add this before closing </body> tag -->
-    <script src="./js/products-data.js"></script>
-    <script src="./js/cart.js"></script>
+    <script src="../js/products-data.js"></script>
+    <script src="../js/cart.js"></script>
+    
 </body>
 </html>
