--- a/Front-end/pages/kids.html
+++ b/Front-end/pages/kids.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids Collection - Sole Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="collection.css">
-    <link rel="stylesheet" href="kids.css">
+    <link rel="stylesheet" href="../css/collection.css">
+    <link rel="stylesheet" href="../css/kids.css">
+    
 </head>
 <body>
     <!-- Header -->
     <header>
         <nav class="navbar">
-            <a href="index.html" class="logo">Sole Haven</a>
+            <a href="../index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
@@ -34,7 +35,7 @@
         <div class="container">
             <div class="product-item" data-category="kids">
                 <a href="product-details.html?id=6" class="product-link">
-                    <img src="shoes/AIR MAX DN (GS) kids.png" alt="Air Max DN (GS) kids">
+                    <img src="../assets/shoes/AIR MAX DN (GS) kids.png" alt="Air Max DN (GS) kids">
                     <h3>Air Max DN (GS) kids</h3>
                     <p>Kids' Air Max with comfortable cushioning.</p>
                     <span class="price">₱2,600.00</span>
@@ -43,7 +44,7 @@
 
             <div class="product-item" data-category="kids">
                 <a href="product-details.html?id=8" class="product-link">
-                    <img src="shoes/AIR MAX DN (GS) kids.png" alt="AIR MAX DN (GS) kids">
+                    <img src="../assets/shoes/AIR MAX DN (GS) kids.png" alt="AIR MAX DN (GS) kids">
                     <h3>AIR MAX DN (GS) kids</h3>
                     <p>Stylish Air Max designed for growing feet.</p>
                     <span class="price">₱2,600.00</span>
@@ -52,7 +53,7 @@
 
             <div class="product-item" data-category="kids">
                 <a href="product-details.html?id=9" class="product-link">
-                    <img src="shoes/BLAZER LOW '77 (GS) KIDS.png" alt="Blazer Low '77 (GS) KIDS">
+                    <img src="../assets/shoes/BLAZER LOW '77 (GS) KIDS.png" alt="Blazer Low '77 (GS) KIDS">
                     <h3>Blazer Low '77 (GS) KIDS</h3>
                     <p>Classic style reimagined for kids.</p>
                     <span class="price">₱2,600.00</span>
@@ -61,7 +62,7 @@
 
             <div class="product-item" data-category="kids">
                 <a href="product-details.html?id=14" class="product-link">
-                    <img src="shoes/KIDS SABRINA 2 KC (GS).jpg" alt="Kids Sabrina 2 KC (GS)">
+                    <img src="../assets/shoes/KIDS SABRINA 2 KC (GS).jpg" alt="Kids Sabrina 2 KC (GS)">
                     <h3>Kids Sabrina 2 KC (GS)</h3>
                     <p>Performance basketball shoes for young athletes.</p>
                     <span class="price">₱2,600.00</span>
@@ -70,6 +71,7 @@
         </div>
     </section>
 
-    <script src="js/collection.js"></script>
+    <script src="../js/collection.js"></script>
+
 </body>
 </html> 
