--- a/Front-end/pages/new-arrival.html
+++ b/Front-end/pages/new-arrival.html
@@ -6,14 +6,15 @@
     <title>New Arrivals - Sole Haven</title>
     <!-- Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="new-arrival.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/new-arrival.css">
+    
 </head>
 <body>
     <!-- Header -->
     <header>
         <nav class="navbar">
-            <a href="index.html" class="logo">Sole Haven</a>
+            <a href="../index.html" class="logo">Sole Haven</a>
             <div class="nav-links">
                 <a href="new-arrival.html" class="active">New & Featured</a>
                 <a href="collection.html">Collection</a>
@@ -51,7 +52,7 @@
                 <!-- Product 1 -->
                 <div class="product-item" data-category="women">
                     <div class="product-image">
-                        <img src="Pictures/2345715567bdafb7e54f11fcfa316ba8.jpg" alt="Elegant Summer Dress">
+                        <img src="../assets/pictures/2345715567bdafb7e54f11fcfa316ba8.jpg" alt="Elegant Summer Dress">
                         <div class="quick-view">
                             <a href="product-details.html?id=1">Quick View</a>
                         </div>
@@ -79,7 +80,7 @@
                 <!-- Product 2 -->
                 <div class="product-item" data-category="men">
                     <div class="product-image">
-                        <img src="Pictures/84ed348d9f1d6cc6f8ee3a48637e3f59.jpg" alt="Classic Denim Jacket">
+                        <img src="../assets/pictures/84ed348d9f1d6cc6f8ee3a48637e3f59.jpg" alt="Classic Denim Jacket">
                         <div class="quick-view">
                             <a href="product-details.html?id=2">Quick View</a>
                         </div>
@@ -107,7 +108,7 @@
                 <!-- Product 3 -->
                 <div class="product-item" data-category="accessories">
                     <div class="product-image">
-                        <img src="Pictures/e71f480bd75e40b75dfb3b18e5611f45.jpg" alt="Designer Handbag">
+                        <img src="../assets/pictures/e71f480bd75e40b75dfb3b18e5611f45.jpg" alt="Designer Handbag">
                         <div class="quick-view">
                             <a href="product-details.html?id=3">Quick View</a>
                         </div>
@@ -155,8 +156,9 @@
         </div>
     </footer>
 
-    <script src="js/products-data.js"></script>
-    <script src="js/favorites.js"></script>
+    <script src="../js/products-data.js"></script>
+    <script src="../js/favorites.js"></script>
+    
     <script>
         // Add filtering functionality
         document.getElementById('category-filter').addEventListener('change', function(e) {
