--- a/Front-end/pages/product-details.html
+++ b/Front-end/pages/product-details.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details - Sole Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="product-details.css">
+    <link rel="stylesheet" href="../css/product-details.css">
+
 </head>
 <body>
     <!-- Header -->
     <header>
         <div class="navbar">
             <div class="logo">
-                <a href="index.html">Sole Haven</a>
+                <a href="../index.html">Sole Haven</a>
             </div>
             <div class="nav-center">
                 <a href="new-arrival.html">New & Featured</a>
@@ -106,8 +107,9 @@
     </div>
 
     <!-- Before closing </body> tag, add these scripts in this order: -->
-    <script src="./js/products-data.js"></script>
-    <script src="./js/storage-utils.js"></script>
-    <script src="./js/product-details.js"></script>
+    <script src="../js/products-data.js"></script>
+    <script src="../js/storage-utils.js"></script>
+    <script src="../js/product-details.js"></script>
+    
 </body>
 </html> 
