--- a/Front-end/pages/register.html
+++ b/Front-end/pages/register.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sole Haven Register</title>
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="../css/register.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <div class="container">
         <div class="logo-section">
@@ -69,6 +70,7 @@
             </form>
         </div>
     </div>
-    <script type="module" src="js/register.js"></script>
+    <script type="module" src="../js/register.js"></script>
+
 </body>
 </html>
